chore(docs): refine user guides description for improved clarity and focus

--- a/src/content/docs/docs/users/index.mdx
+++ b/src/content/docs/docs/users/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: User Guides and Documentation
-description: 'Step‑by‑step user guides for Mezo: create an account, connect a wallet, deposit assets, and borrow or redeem MUSD safely. Includes key concepts, mainnet bridges, fees, risks, and links to developer docs for deeper technical details.'
+description: 'Official Mezo documentation: Wallet setup, asset bridging, MUSD borrowing guides, and developer resources. This is your complete guide to banking on yourself.'
 topic: users
 ---
 
