Add Lolli integration documentation
- Add new integrations/lolli section under users docs
- Include overview, withdraw, using-mezo, and faqs pages
- Update sidebar navigation in astro.config.mjs
- Update SUMMARY.md with new structure
- Add integrations section to main users index page
- All content provided by user with proper formatting and links

--- a/src/content/docs/docs/users/index.mdx
+++ b/src/content/docs/docs/users/index.mdx
@@ -49,6 +49,14 @@ Use your assets to unlock the spending power of your Bitcoin.
   Borrow and Mint MUSD
 </LinkButton>
 
+## Integrations
+
+Connect with partner platforms to enhance your Bitcoin experience.
+
+<LinkButton href="/docs/users/integrations/lolli">
+  Lolli Integration
+</LinkButton>
+
 ## Developers
 
 Want to develop on Mezo? Get started in the developer documentation.
