Refactor Lolli integration documentation and remove validators resource
- Update sidebar navigation in astro.config.mjs to remove 'validators' link
- Add 'validators' link to the Mezo nodes section in the sidebar
- Clean up titles in various Lolli integration markdown files for consistency
- Delete obsolete validators.md file to streamline resources

--- a/src/content/docs/docs/users/integrations/lolli/index.mdx
+++ b/src/content/docs/docs/users/integrations/lolli/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Overview'
+title: Overview
 description: >-
   Learn about withdrawing your sats from Lolli to Mezo for self-custody Bitcoin
   banking
