Add YouTube embeds to Mezo Earn pages using YouTube component
- Update YouTube.astro component to support start time parameter
- Convert overview, lock, pools, and vote pages to mdx
- Add YouTube video embeds with proper timestamps:
  - Overview: full video
  - How to Lock BTC: start=51
  - Using Mezo Pools: start=128
  - How to Vote: start=89
- Include whitepaper link on overview page

--- a/src/content/docs/docs/users/mezo-earn/lock/vebtc/how-to-lock-btc.mdx
+++ b/src/content/docs/docs/users/mezo-earn/lock/vebtc/how-to-lock-btc.mdx
@@ -4,17 +4,11 @@ description: Step-by-step guide to locking BTC
 topic: users
 ---
 
+import YouTube from '../../../../../../../components/YouTube.astro';
+
 Locking BTC gives you a veBTC NFT, which grants voting power, protocol fees, and governance rights. See the [veBTC Overview](/docs/users/mezo-earn/lock/vebtc) for details on what you earn.
 
-<iframe 
-  width="100%" 
-  height="400" 
-  src="https://www.youtube.com/embed/6rthu_iub7E?start=51" 
-  title="How to Lock BTC" 
-  frameborder="0" 
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-  allowfullscreen>
-</iframe>
+<YouTube id="6rthu_iub7E" title="How to Lock BTC" start={51} />
 
 ## Prerequisites
 
