--- a/src/content/docs/docs/users/mezo-earn/pools/using-mezo-pools-guide.mdx
+++ b/src/content/docs/docs/users/mezo-earn/pools/using-mezo-pools-guide.mdx
@@ -4,17 +4,11 @@ description: How to deposit, manage your positions, claim rewards, and more
 topic: users
 ---
 
+import YouTube from '../../../../../../components/YouTube.astro';
+
 Providing liquidity on Mezo Pools enables you to earn trading fees and mats emissions while deepening the market for Bitcoin-backed assets. This guide walks you through the complete process.
 
-<iframe 
-  width="100%" 
-  height="400" 
-  src="https://www.youtube.com/embed/6rthu_iub7E?start=128" 
-  title="Using Mezo Pools" 
-  frameborder="0" 
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-  allowfullscreen>
-</iframe>
+<YouTube id="6rthu_iub7E" title="Using Mezo Pools" start={128} />
 
 ## Prerequisites
 
