--- a/src/content/docs/docs/users/mezo-earn/vote/how-to-vote.mdx
+++ b/src/content/docs/docs/users/mezo-earn/vote/how-to-vote.mdx
@@ -4,17 +4,11 @@ description: Step-by-step guide to voting on gauges with your veBTC
 topic: users
 ---
 
+import YouTube from '../../../../../../components/YouTube.astro';
+
 Voting allows you to direct the flow of emissions and, in return, earn a proportional share of the trading fees and incentives from the gauges you allocate to. This guide walks you through the complete process.
 
-<iframe 
-  width="100%" 
-  height="400" 
-  src="https://www.youtube.com/embed/6rthu_iub7E?start=89" 
-  title="How to Vote" 
-  frameborder="0" 
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-  allowfullscreen>
-</iframe>
+<YouTube id="6rthu_iub7E" title="How to Vote" start={89} />
 
 ## Prerequisites
 
