--- a/src/content/docs/docs/users/integrations/lolli/index.mdx
+++ b/src/content/docs/docs/users/integrations/lolli/index.mdx
@@ -38,20 +38,20 @@ When you create a wallet, you'll be given a seed phrase (also called a recovery 
 
 This is the master key to your Bitcoin. Anyone who has your seed phrase has complete access to your funds. If you lose it, your Bitcoin is gone forever.
 
-**Do this:**
+:::tip[Do this]
+- Write your seed phrase on paper (or stamp it into metal)
+- Store it somewhere secure—fireproof safe, safety deposit box, etc.
+- Consider keeping copies in multiple secure locations
+- Never take a photo of it
+- Never store it digitally (no screenshots, no cloud drives, no password managers)
+- Never share it with anyone, ever
+:::
 
-* Write your seed phrase on paper (or stamp it into metal)
-* Store it somewhere secure—fireproof safe, safety deposit box, etc.
-* Consider keeping copies in multiple secure locations
-* Never take a photo of it
-* Never store it digitally (no screenshots, no cloud drives, no password managers)
-* Never share it with anyone, ever
-
-**Never do this:**
-
-* Type your seed phrase into any website or app (legitimate wallets will never ask for this)
-* Store it in email, notes apps, or cloud storage
-* Share it with anyone claiming to be "support" (this is always a scam)
+:::danger[Never do this]
+- Type your seed phrase into any website or app (legitimate wallets will never ask for this)
+- Store it in email, notes apps, or cloud storage
+- Share it with anyone claiming to be "support" (this is always a scam)
+:::
 
 ### Protect Yourself from Scams
 
