--- a/src/content/docs/docs/users/musd/mint-musd.mdx
+++ b/src/content/docs/docs/users/musd/mint-musd.mdx
@@ -9,9 +9,7 @@ import YouTube from '../../../../../components/YouTube.astro';
 
 [MUSD](https://mezo.org/feature/musd) is available on Mezo Mainnet and available for testing on Mezo Testnet. This guide shows you how to complete the borrow process using Mezo Testnet as an example or as a way to borrow and mint MUSD for development purposes. Later, go to the [Mezo App](mezo.org) and sign in on Mainnet to borrow and mint real MUSD.
 
-<YouTube id="wot3-SR-25E" title="How to Open a Bitcoin-backed Loan on Mezo" />
-
-![A screenshot of the loan status screen](/docs/images/musd/borrow-flow-animation.webp)
+<YouTube id="wot3-SR-25E" title="How to Open a Bitcoin-backed Loan on Mezo" /
 
 ## Before you begin
 
